2024-05-31T12:37:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9318264867 # 317
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-31
* notice: last 14d: unq all: 16 79
* notice: prev accum: outdated-unq outdated-all / unq all: 675 3718 / 693 3904
* notice: next accum: outdated-unq outdated-all / unq all: 675 3718 / 694 3905
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -2 -108 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-17 2024-05-31]

2024-05-31T01:24:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9311491461 # 316
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-31
* notice: last 14d: unq all: 17 186
* notice: prev accum: outdated-unq outdated-all / unq all: 671 3683 / 693 3904
* notice: next accum: outdated-unq outdated-all / unq all: 675 3718 / 693 3904
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-16] / []

2024-05-30T12:37:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9302638797 # 315
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-30
* notice: last 14d: unq all: 20 215
* notice: prev accum: outdated-unq outdated-all / unq all: 671 3683 / 691 3896
* notice: next accum: outdated-unq outdated-all / unq all: 671 3683 / 693 3904
* notice: prev exec diff / last date diff / accum: unq all: +2 +8 -1 -6 / +2 +8 -0 -0 / 2 8
* notice: removed / changed dates: [] / [2024-05-16 2024-05-30]

2024-05-30T01:23:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9295486932 # 314