@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-31T12:37:00Z",
-  "count_outdated" : 3718,
-  "uniques_outdated" : 675,
+  "timestamp" : "2024-06-01T01:34:42Z",
+  "count_outdated" : 3834,
+  "uniques_outdated" : 678,
   "count" : 3905,
   "uniques" : 694,
   "views" : [
-    {
-      "timestamp": "2024-05-17T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 116 ],
-      "count_decinc": [ 108, 116 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2024-05-18T00:00:00Z",
       "count": 10,
