@@ -1,12 +1,7 @@
 {
-  "count": 79,
+  "count": 71,
   "uniques": 16,
   "views": [
-    {
-      "timestamp": "2024-05-17T00:00:00Z",
-      "count": 8,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-18T00:00:00Z",
       "count": 10,
